# sqlc-gen-better-python

./: .changie.yaml  .coderabbit.yaml  .coverage  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.bat  codecov.yml  cover.base.tmp  cover.tmp  coverage.xml  en.search-data.json  en.search.min.dcfbb0510f665d65e780cc57125e47715f183f1a671daf0d52ab7082de6c22cb.js  go.mod  go.sum  index.html  index.xml  noxfile.py  pyproject.toml  release_body.md  renovate.json  ruff.toml  sitemap.xml  sqlc.yaml
.changes/: v0.0.1.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.5.0.md  v0.5.1.md  v0.6.0.md
.changes/unreleased/: Added-20250401-003545.yaml  Added-20250401-004659.yaml  Added-20250401-013109.yaml  Added-20250401-032927.yaml  Added-20250505-215623.yaml  Added-20250505-224722.yaml  Added-20250505-234435.yaml  Added-20250505-235032.yaml  Added-20250506-000639.yaml  Added-20250509-081237.yaml  Added-20250514-004832.yaml  Added-20250514-201859.yaml  Added-20250515-230249.yaml  Added-20250516-111445.yaml  Added-20250516-115631.yaml  Added-20250518-003152.yaml  Added-20250519-195825.yaml  Added-20250521-014208.yaml  Added-20250521-014228.yaml  Added-20250521-031652.yaml  Added-20250524-215948.yaml  Added-20250526-010713.yaml  Added-20250831-182122.yaml  Added-20250903-021638.yaml  Added-20260718-120000.yaml  Added-20260718-120001.yaml  Added-20260718-120002.yaml  Added-20260719-200002.yaml  Added-20260719-210000.yaml  Added-20260720-120000.yaml  Added-20260720-160000.yaml  Added-20260720-230000.yaml  Added-20260721-140000.yaml  Added-20260722-120000.yaml  Added-20260724-120000.yaml  Breaking-20251210-092132.yaml  Breaking-20260718-120002.yaml  Breaking-20260718-120003.yaml  Breaking-20260718-120005.yaml  Breaking-20260719-120000.yaml  (+33 more)
.github/: FUNDING.yml  dependabot.yml  release_output_template.yaml
.github/workflows/: ci.yml  docs.yml  fragments-check.yml  prepare_release.yml  release.yml
categories/: index.html  index.xml
docs/: .gitignore  go.mod  hugo.yaml  index.html  index.xml
docs/content/: _index.md
docs/converters/: index.html
docs/getting-started/: index.html
docs/guide/: index.html  index.xml
docs/i18n/: en.yaml
docs/reference/: index.html  index.xml
internal/: builders.go  gen.go  generator.go  handler.go  handler_test.go
internal/codegen/: common.go  enums.go  init.go  models.go  queries.go  tables.go
internal/config/: config.go  config_test.go  constants.go  constants_test.go  overrides.go  overrides_test.go
internal/core/: Column.go  config.go  enums.go  function.go  importer.go  models.go  overrides.go  reserved.go  utils.go
internal/doTypeConversion/: asyncpg.go  common.go  sqlite.go
internal/driver/: aiosqlite.go  asyncpg.go  asyncpg_test.go  common.go  common_test.go  conversion.go  conversion_test.go  driver.go  driver_test.go  init.go  psycopg.go  psycopg_test.go  queries.go  rowbuilder.go  rowbuilder_test.go  sqlite3.go  sqlite_base.go  sqlite_test.go  tables.go
internal/log/: logger.go  logger_test.go  main.go
internal/model/: naming.go  naming_test.go  reserved.go  reserved_test.go  singular.go  singular_test.go  types.go  types_test.go
internal/render/: enums.go  imports.go  imports_test.go  queries.go  render_enums_test.go  render_queries_test.go  renderer.go  (+3 more)
js/: main.min.efa4045ba3371a6906708fc568a65c6491146ea27c9aed75f9174e6f0da85c52.js
plugin/: main.go
tags/: index.html  index.xml
test/: __init__.py  conftest.py  converters.py  log.txt  models.py  queries.py  queries.sql  queries.txt  schema.sql  t.json  test_type.py
(+751 files in other folders)
